v0.5.1
* Bug Fix/Change, + Addition, - Removal

Full Screen Map
* Map Segment Culling massivly improved

Minimap
+ Minimap can now be resized trough scrolling in settings menu
* Player Marker now get's positioned correctly on scaled minimap
- Removed old player marker for default style minimap

Compass


General
* Fixed brighter lines generating on the map