@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 MC_VERSION=1.16.1
-MOD_VERSION=0.5.0
-FORGE_VERSION=32.0.39
+MOD_VERSION=0.5.1
+FORGE_VERSION=32.0.47
 MAPPINGS_VERSION=20200514-1.16
