@@ -1,19 +1,22 @@
 package net.dark_roleplay.travellers_map2.util;
 
+import net.minecraft.client.Minecraft;
 import net.minecraft.util.ResourceLocation;
+import net.minecraft.world.storage.SaveFormat;
 
 import java.io.File;
 import java.net.InetSocketAddress;
+import java.net.SocketAddress;
 
 public class MapFileHelper {
-
-	private static boolean IS_MULTIPLAYER = false;
 
 	private static File SP_FOLDER;
 	private static File MP_FOLDER;
 
 	private static File ACTIVE_FOLDER;
 	private static File DIM_FOLDER;
+
+	private static File WAYPOINT_FOLDER;
 
 	static{
 		File baseFolder = new File("./mod_data/travellers_map/");
@@ -24,26 +27,30 @@ public class MapFileHelper {
 		MP_FOLDER.mkdirs();
 	}
 
-	public static void joinServer(InetSocketAddress socket){
-		IS_MULTIPLAYER = true;
-
-		ACTIVE_FOLDER = new File(MP_FOLDER, socket.getHostName() + "_" +  socket.getPort());
-		ACTIVE_FOLDER.mkdirs();
-	}
-
-	public static void leaveServer(){
-		IS_MULTIPLAYER = false;
-		ACTIVE_FOLDER = null;
-	}
-
-	public static void joinDimension(ResourceLocation loc){
-		if(ACTIVE_FOLDER == null){
-			ACTIVE_FOLDER = new File(SP_FOLDER, "temp");
-			ACTIVE_FOLDER.mkdirs();
-			//TODO Implement client side folders
+	public static void setupBaseMapFolder(ResourceLocation dimensionLoc){
+		if(Minecraft.getInstance().isIntegratedServerRunning()){
+			SaveFormat.LevelSave saveFile = Minecraft.getInstance().getIntegratedServer().anvilConverterForAnvilFile;
+			ACTIVE_FOLDER = new File(SP_FOLDER, saveFile.func_237282_a_());
+		}else{
+			SocketAddress socket = Minecraft.getInstance().getConnection().getNetworkManager().getRemoteAddress();
+			if(socket instanceof InetSocketAddress){
+				InetSocketAddress inet = (InetSocketAddress) socket;
+				ACTIVE_FOLDER = new File(MP_FOLDER, inet.getHostName() + "_" +  inet.getPort());
+			}
 		}
 
-		DIM_FOLDER = new File(ACTIVE_FOLDER, loc.getNamespace() + "_" + loc.getPath());
+		WAYPOINT_FOLDER = new File(ACTIVE_FOLDER, "waypoints");
+		WAYPOINT_FOLDER.mkdirs();
+
+		DIM_FOLDER = new File(ACTIVE_FOLDER, dimensionLoc.getNamespace() + "_" + dimensionLoc.getPath() + "/default_mapper");
 		DIM_FOLDER.mkdirs();
+	}
+
+	public static File getDimFolder(){
+		return DIM_FOLDER;
+	}
+
+	public static File getWaypointFolder(){
+		return WAYPOINT_FOLDER;
 	}
 }
