@@ -1,1 +1,2 @@
 public net.minecraft.client.gui.overlay.PlayerTabOverlayGui field_175254_k # visible
+public net.minecraft.server.MinecraftServer field_71310_m # anvilConverterForAnvilFile
